--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2.1'
 
+    // https://mvnrepository.com/artifact/com.alibaba/fastjson
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.68'
+
+
     compile group: 'com.github.xiaoymin', name: 'knife4j-discovery-spring-boot-starter', version: '1.0'
     compile group: 'com.github.xiaoymin', name: 'knife4j-spring-ui', version: '2.0.2'
     compile group: 'com.github.xiaoymin', name: 'knife4j-spring-boot-starter', version: '2.0.2'
